# pontepay

./: .clauderc  .env.example  .gitignore  .repomixignore  AGENTS.md  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  skills-lock.json  tsconfig.json
.claude/: settings.json
.playwright-cli/: page-2026-06-22T16-35-04-857Z.yml  page-2026-06-22T16-38-10-714Z.yml  page-2026-06-22T16-40-06-689Z.yml  (+3 more)
contracts/: .gitignore  Cargo.toml  Makefile  README.md
contracts/.github/workflows/: contract-ci.yml
contracts/contracts/escrow/: Makefile
contracts/contracts/escrow/src/: contract.rs  error.rs  lib.rs
contracts/contracts/escrow/src/core/: dispute.rs  escrow.rs  milestone.rs
contracts/contracts/escrow/src/core/validators/: dispute.rs  escrow.rs  milestone.rs
contracts/contracts/escrow/src/events/: handler.rs
contracts/contracts/escrow/src/modules/fee/: calculator.rs
contracts/contracts/escrow/src/modules/math/: safe.rs
contracts/contracts/escrow/src/storage/: types.rs
contracts/contracts/escrow/src/tests/: test.rs
contracts/contracts/p2p/: Cargo.toml  Makefile
contracts/contracts/p2p/src/: contract.rs  error.rs  lib.rs
contracts/contracts/p2p/src/core/: admin.rs  dispute.rs  oracle.rs  order.rs
contracts/contracts/p2p/src/core/validators/: admin.rs  dispute.rs  order.rs
contracts/contracts/p2p/src/events/: handler.rs
contracts/contracts/p2p/src/storage/: types.rs
contracts/contracts/p2p/src/tests/: test.rs
contracts/scripts/: build_escrow_payload.py  run_simple_escrow_flow.sh  run_simple_p2p_flow.sh
(+226 files in other folders)
