[workspace]
resolver = "2"
members = [
"contracts/*",
]

[workspace.dependencies]
soroban-sdk = "=23.1.1"
soroban-token-sdk = { version = "=23.1.1" }
# OpenZeppelin Stellar contracts — upgradeable module (0.5.x targets soroban-sdk 23.x)
stellar-contract-utils = "=0.5.0"
stellar-macros = "=0.5.0"

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

# For more información sobre este perfil ve https://soroban.stellar.org/docs/basic-tutorials/logging#cargotoml-profile
[profile.release-with-logs]
inherits = "release"
debug-assertions = true